--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ env:
 
 #And compile!
 before_script:
-  - wget "http://www.sourcemod.net/latest.php?version=$SOURCEMOD&os=linux" -O game_upload/sourcemod-$SOURCEMOD-linux.tar.gz
-  - cd game_upload
+  - wget "http://www.sourcemod.net/latest.php?version=$SOURCEMOD&os=linux" -O game/sourcemod-$SOURCEMOD-linux.tar.gz
+  - cd game
   - tar -xzf sourcemod-$SOURCEMOD-linux.tar.gz
   - cd addons/sourcemod/scripting/
   - wget https://bitbucket.org/GoD_Tony/updater/raw/53ebb3e27e5a43bc46dc52dc0de76ac2fb48cd9e/include/updater.inc -O include/updater.inc
   - chmod +x spcomp
 
 script:
-  - ./compile.sh sourcebans.sp
+  - ./compile.sh sourcebans.sp sb_viewbans.sp sb_report.sp sb_bans.sp sb_admins.sp
